# learning-objective-generator

./: .gitignore  learningobjectivegenerator.c  meson.build  package.json
app/: index.js  learning-objective-generator.js  utilities.js
src/: config.h  learningobjectivegenerator.c  objective-options.c
src/generators/: art-generator.c  art-generator.h  english-generator.c  english-generator.h  french-generator.c  french-generator.h  history-generator.c  history-generator.h  math-generator.c  math-generator.h  physical-education-generator.c  physical-education-generator.h  religion-generator.c  religion-generator.h  science-generator.c  science-generator.h  spanish-generator.c  spanish-generator.h
src/lib/: objective-options.c  objective-options.h  utils.c  utils.h
